# g2-forge

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENHANCEMENTS_V1_2B.md  GITHUB_PAGES_SETUP.md  LICENSE  NEW_TESTS_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  REQUIREMENTS_GUIDE.md  ROADMAP.md  SECURITY.md  STATUS.md  TESTING_COMPLETE_PHASE1-2.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  crash_test.py  pyproject.toml  pytest.ini  requirements-core.txt  requirements-cuda.txt  requirements-dev.txt  requirements-optional.txt  requirements-test.txt  requirements.txt  run_new_tests.sh  setup.py  setup_tests.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: README.md  _config.yml  index.html
examples/: complete_example.py  test_networks.py  test_phase2.py
examples/configs/: k7_custom_topology.py  k7_gift_reproduction.py
g2forge/: __init__.py  cli.py
g2forge/analysis/: __init__.py  spectral.py
g2forge/core/: __init__.py  losses.py  operators.py
g2forge/manifolds/: __init__.py  base.py  joyce.py  k7.py
g2forge/networks/: __init__.py  harmonic_network.py  phi_network.py
g2forge/physics/: __init__.py  rg_flow.py  volume_normalizer.py
g2forge/training/: __init__.py  trainer.py
g2forge/utils/: __init__.py  config.py
g2forge/validation/: __init__.py  geometric.py
gift_examples/: README.md
gift_examples/1.0/: INDEX.md  K7_TCS_v1_0_Complete.ipynb  K7_TCS_v1_0_Refactored.ipynb  K7_v1_0_STANDALONE_FINAL.ipynb  K7_v1_0_main.py  METHODOLOGY.md  PACKAGE_MANIFEST.md  PRESENTATION_SUMMARY.md  README.md  README_REFACTORED.md  RESULTS_PACKAGE_README.md  RESULTS_REPORT.md  checkpoint_epoch_14999.pt  checkpoint_epoch_5499.pt  checkpoint_epoch_6499.pt  checkpoint_epoch_6999.pt  checkpoint_epoch_7499.pt  config.json  losses.py  tcs_operators.py  training.py  validation.py  yukawa.py  yukawa_tensor.pt
gift_examples/1_1/: K7_G2_TCS_ExplicitMetric_v1_1.ipynb
gift_examples/1_1a/: K7_G2_TCS_ExplicitMetric_v1_1a.ipynb  checkpoint_phase4_epoch_406.pt  checkpoint_phase5_epoch_499.pt  checkpoint_phase5_epoch_999.pt  harmonic_2forms.npy  metadata.json  metric_samples.npy  phi_samples.npy  training_history.csv  yukawa_tensor.npy
notebooks/: 01_quickstart_tutorial.ipynb
tests/: PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  README.md  TESTING_COMPLETE_ALL_PHASES.md  __init__.py  conftest.py
tests/edge_cases/: __init__.py  test_extreme_cases.py  test_manifold_boundaries.py
tests/integration/: __init__.py  test_advanced_training.py  test_checkpointing.py  test_gift_reproduction.py  test_long_training.py  test_physics_integration.py  test_training_pipeline.py  test_universal_topologies.py
tests/performance/: __init__.py  test_benchmarks.py
tests/regression/: __init__.py  test_deterministic.py  test_numerical_precision.py  test_performance_baselines.py
tests/unit/: __init__.py  test_config.py  test_config_serialization.py  test_cross_topology_parametrization.py  test_device_management.py  test_error_handling.py  test_error_messages.py  test_factory_functions.py  test_fourier_features.py  test_fractality_analysis.py  test_geometric_validation.py  test_gradient_flow.py  test_k7_manifold.py  test_losses.py  test_manifold_base.py  test_multi_grid_analysis.py  test_rg_flow.py  (+10 more)
(+9 files in other folders)
